# CNN_Strong_Lensing_Classification

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  codecov.yml  coverage.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: coverage.yml  pre-commit.yml
data/real_lenses_SLED/lensed_galaxies/cutouts/100108_024029/Pan-STARRS1/: 100108_024029_g.fits  100108_024029_i.fits  100108_024029_r.fits  100108_024029_y.fits
data/real_lenses_SLED/lensed_quasars/: quasars.json
data/real_lenses_SLED/lensed_supernovae/: supernovae.json
data_download/: workflow.py
datasets/real_lenses_SLED/: data_access.ipynb
datasets/real_lenses_SLED/lensed_galaxies/: galaxies.json
datasets/real_lenses_SLED/lensed_quasars/: quasars.json
src/evaluation/: evaluator.py
src/layers/: activation_layer.py  batch_norm_layer.py  conv_layer.py  dense_layer.py  dropout_layer.py  flatten_layer.py  max_pool_layer.py
src/model/: cnn.py  loss.py  optimizer.py
src/trainer/: predict.py  train.py
src/tuner/: estimator.py  hpo.py
tests/: test_setup.py
tests/test_src/test_evaluation/: test_evaluator.py
tests/test_src/test_layers/: test_activation_layer.py  test_batch_norm_layer.py  test_conv_layer.py  test_dense_layer.py  test_dropout_layer.py  test_flatten_layer.py  test_max_pool_layer.py
tests/test_src/test_model/: test_cnn.py  test_loss.py  test_optimizer.py
tests/test_src/test_trainer/: test_predict.py  test_train.py
tests/test_src/test_tuner/: test_estimator.py  test_hpo.py
tests/test_tuner/: test_estimator.py
(+3212 files in other folders)
