[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "CNN_Strong_Lensing_Classification"
version = "0.1.0"
description = ""
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "jupyter",
    "pytest",
    "pytest-cov",
    "pyswip"
]