[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "CNN_Strong_Lensing_Classification"
version = "0.1.0"
description = ""
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "jupyter",
    "pytest",
    "pytest-cov",
    "pyswip"
]

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]  # Errors, Pyflakes, Import sorting
fixable = ["ALL"]

# Black configuration
[tool.black]
line-length = 88
target-version = ["py310"]

# Pytest configuration
[tool.pytest.ini_options]
addopts = "--cov=./ --cov-report=xml --cov-report=term"
testpaths = ["tests"]
